--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "bank app",
   "main": "app.js",
   "scripts": {
-    "test": "npm test"
+    "test": "./node_modules/.bin/mocha $(find test -name '*.js')"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/irbekrm/Bank#readme",
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.2.0"
-  }
+    "mocha": "^5.2.0",
+    "sinon": "^5.0.7"
+  },
+  "dependencies": {}
 }
