--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "sinon": "^5.0.7",
     "test-console": "^1.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "moment": "^2.22.1",
+    "moment-timezone": "^0.5.17"
+  }
 }
