--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "bank app",
   "scripts": {
+    "start": "node app.js",
     "test": "nyc ./node_modules/.bin/mocha $(find test -name '*.js')",
     "lint": "./node_modules/.bin/eslint ."
   },
